[project]
name = "breaktimer"
version = "0.1.0"
description = ""
authors = [
    {name = "Kedarini",email = "kedardamps@gmail.com"}
]
requires-python = ">=3.14 <3.15"
dependencies = [
    "pyside6 (>=6.11.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
